@@ -3,7 +3,7 @@ namespace SJBR\SrFreecap\Controller;
 /***************************************************************
  *  Copyright notice
  *
- *  (c) 2012-2013 Stanislas Rolland <typo3@sjbr.ca>
+ *  (c) 2012-2015 Stanislas Rolland <typo3@sjbr.ca>
  *  All rights reserved
  *
  *  This script is part of the TYPO3 project. The TYPO3 project is
@@ -93,5 +93,3 @@ class FontMakerController  extends \TYPO3\CMS\Extbase\Mvc\Controller\ActionContr
 		$this->view->assign('font', $font);
 	}
 }
-class_alias('SJBR\\SrFreecap\\Controller\\FontMakerController', 'Tx_SrFreecap_Controller_FontMakerController');
-?>
