@@ -1,3 +1,7 @@
+2015-01-27  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Resolves #64543: Extension does not handle vendorName
+
 2015-01-26  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #64517: CaptchaValidator::isValid should be protected
